...
    <string name="events">Events</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="loading_content_description">Please wait, loading</string>

    <string name="auth_invitation">Log in to have access to all features</string>
    <string name="authorization">Log in</string>

    <string name="future_events">Planned</string>
    <string name="past_events">Past</string>
...
    <string name="unblock">Unblock</string>

    <string name="user_will_be_blocked">Block this user?</string>
    <string name="user_will_be_unblocked">Unblock this user?</string>
    <string name="user_unblocked_successfully">User %1$s unblocked</string>

    <string name="small_park">Small</string>
    <string name="medium_park">Medium</string>
    <string name="large_park">Large</string>

    <string name="soviet_park">Soviet</string>
    <string name="modern_park">Modern</string>
    <string name="collars_park">Collars</string>
    <string name="legendary_park">Legendary</string>

    <string name="man">Man</string>
    <string name="male">Male</string>
    <string name="woman">Woman</string>
    <string name="female">Female</string>
    <string name="message_for_user">Message for %1$s</string>
...
    <string name="dynamic_colors_hint">Use colors based on your wallpaper</string>
    <string name="app_icon">App icon</string>
    <string name="app_language">App language</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="back">Back</string>
    <string name="primary_icon">Primary icon</string>
    <string name="variant">Variant</string>
    <string name="app_display_name">App display name</string>

    <string name="events_title">Events</string>
    <string name="events_empty_future">No upcoming events</string>
...
    <string name="apply_button">Apply</string>

    <string name="parks_map">Map</string>
    <string name="parks_list">List</string>
    <string name="map_coming_soon">Map coming soon</string>

    <string name="park_title">Park</string>
    <string name="park_number_title">Park #%1$d</string>
    <string name="new_park_title">New Park</string>
    <string name="park_actions">Park actions</string>
    <string name="park_share">Share</string>
    <string name="build_route">Build a route</string>
    <string name="create_event">Create an event</string>
    <string name="train_here">I train here</string>
    <string name="participate_too">I am participating</string>
...
    <string name="need_update_park">Should we update any information about this park?</string>
    <string name="send_letter">Write a letter</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="delete_ground">Delete the park?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry_title">Delete entry</string>
    <string name="delete_entry_message">Are you sure you want to delete this entry?</string>
    <string name="delete_dialog_title">Delete dialog?</string>
    <string name="delete_dialog_message">The dialog will be deleted without the possibility of recovery.</string>
    <string name="dialog_delete_error">Failed to delete dialog</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="address">Address</string>
    <string name="park_address">Park address</string>
    <string name="park_type">Park type</string>
    <string name="park_size">Park size</string>
    <string name="save">Save</string>

    <string name="event_title">Event</string>
    <string name="event_description">Description</string>
    <string name="event_author">Organizer</string>
    <string name="event_photos">Photos</string>
    <string name="event_edit">Edit event</string>
...
    <string name="where">Where</string>
    <string name="participants">Participants</string>
    <string name="event_participants_title">Event participants</string>
    <string name="park_trainees_title">Here they train</string>
    <string name="description">Description</string>
    <string name="organized_by">Organized by</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="logout">Logout</string>

    <string name="logout_confirmation_title">Log out of your profile?</string>

    <plurals name="ageInYears">
...
    <string name="event_form_description_label">Description</string>
    <string name="event_form_description_placeholder">Add some details about the upcoming event</string>
    <string name="event_form_park_label">Park</string>
    <string name="event_form_park_select">Select park</string>
    <string name="event_form_date_label">Date and time</string>
    <string name="event_form_save">Save</string>
    <string name="confirm_close_title">Close?</string>
    <string name="confirm_close_message">Unsaved changes will be lost</string>

    <!-- Location permission -->
    <string name="location_permission_alert_title">Location access</string>
    <string name="location_permission_alert_message">To create a park, allow geolocation access to determine the coordinates of a new park.</string>
    <string name="open_settings">Open settings</string>
    <string name="location_permission_denied">You have not granted access to geolocation</string>
...
